test_regress/t/t_semaphore_std.out
%Error: t/t_semaphore.v:21:4: Can't find typedef: 'semaphore'
   21 |    semaphore s;
      |    ^~~~~~~~~
%Error: t/t_semaphore.v:22:4: Can't find typedef: 'semaphore'
   22 |    semaphore s2;
      |    ^~~~~~~~~
%Error: Exiting due to
